img stretching bug solved

--- a/src/App.scss
+++ b/src/App.scss
@@ -128,6 +128,9 @@ header h1 {
 .foto img {
 	display: block;
 	width: 100%;
+	height: 100%;
+	// margin-left: auto;
+	// margin-right: auto;
 }
 
 .foto div {
